--- a/frontend/src/components/Sidebar.css
+++ b/frontend/src/components/Sidebar.css
@@ -1,3 +1,4 @@
+@import url('../bootstrap/css/bootstrap.min.css');
 .sidebar {
     height: 100vh;
     background-color: #f8f9fa;
@@ -7,26 +8,26 @@
     justify-content: space-between;
     padding: 20px 0;
 }
-  
+
 .sidebar img {
     width: 50px;
     height: 50px;
     border-radius: 50%;
     object-fit: cover;
 }
-  
+
 .sidebar .home-icon {
     font-size: 48px;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-  
+
 .sidebar {
     font-size: 14px;
     color: #000;
 }
-  
+
 .sidebar .logout button {
     font-size: 14px;
     color: #000;
